<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <TextView
       android:id="@+id/textView_login_1"
       android:layout_width="72dp"
       android:layout_height="45dp"
       android:layout_marginStart="48dp"
       android:text="@string/layout_m_text_1"
       android:textStyle="bold"
       android:gravity="center"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.498" />

   <TextView
       android:id="@+id/textView_login_2"
       android:layout_width="72dp"
       android:layout_height="45dp"
       android:layout_marginStart="48dp"
       android:layout_marginTop="8dp"
       android:text="@string/layout_m_text_2"
       android:textStyle="bold"
       android:gravity="center"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/textView_login_1" />

   <EditText
       android:id="@+id/editTextTextPersonName_login_1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:ems="10"
       android:inputType="textPersonName"
       android:minHeight="48dp"
       android:hint="@string/layout_m_text_3"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toEndOf="@+id/textView_login_1"
       app:layout_constraintTop_toTopOf="parent" />

   <EditText
       android:id="@+id/editTextTextPersonName_login_2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:ems="10"
       android:inputType="textPassword"
       android:minHeight="48dp"
       android:hint="@string/layout_m_text_4"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toEndOf="@+id/textView_login_2"
       app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName_login_1"
       app:layout_constraintVertical_bias="0.01" />

   <Button
       android:id="@+id/button_login_1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/layout_m_button_1"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.129"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/textView_login_2" />

   <Button
       android:id="@+id/button_login_2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="88dp"
       android:text="@string/layout_m_button_2"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.042"
       app:layout_constraintStart_toEndOf="@+id/button_login_1"
       app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName_login_2" />

</androidx.constraintlayout.widget.ConstraintLayout>